--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   responsive_util: ^0.4.0
   firebase_database: ^10.0.9
   firebase_core: ^2.4.1
+  http: ^0.13.5
 
 dev_dependencies:
   cloud_firestore:
